--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-    <title>Mejorando contenido y estructura del sitio</title>
+    <title>Mi primera página web</title>
     <link rel="stylesheet" type="text/css" href="estilobarra.css" />
 </head>
 
