primera confirmacion de actualizacion

--- a/acercade.html
+++ b/acercade.html
@@ -35,6 +35,10 @@
             <img src="img/mza2.jpg" alt="Dique Potrerillos" />
             <img src="img/mza3.jpg" alt="Ciudad de Mendoza" />
         </div>
+
+        <div class="saludo">
+            ¡Visitanos pronto!
+        </div>
     </main>
 
     <footer>
