--- a/acercade.html
+++ b/acercade.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="saludo">
-            ¡Visitanos pronto!
+            ¡Gracias por visitarnos!
         </div>
     </main>
 
